# isoft-update-client

./: CMakeLists.txt  README.md
cmake/: Findlibtar.cmake
console/: CMakeLists.txt  main.c
daemon/: CMakeLists.txt  README  README.md  archive.c  archive.h  daemon.c  daemon.h  download.c  download.h  extensions.c  flow.odg  isoft-offline-update.c  main.c  md5.c  md5.h  rpm-helper.c  rpm-helper.h  utils.c  utils.h
daemon/packagekit-glib2/: pk-progress-bar.c  pk-progress-bar.h
data/: CMakeLists.txt  README.md  isoft-update-daemon.service.in  isoft-update.conf  org.isoftlinux.Update.conf  org.isoftlinux.Update.service.in  org.isoftlinux.Update.xml  updates.xml
kcm/: CMakeLists.txt  kcm_isoftupdate.desktop  main.cpp  main.h
kcm_viewer/: CMakeLists.txt  kcm_isoftupdate_viewer.desktop  main.cpp  main.h
plasma/: CMakeLists.txt  isoftupdate.cpp  isoftupdate.h  main.cpp  qmldir
plasma/package/: metadata.desktop
plasma/package/contents/ui/: main.qml
po/: CMakeLists.txt  isoftupdateinstall.pot  zh_CN.po
test/: CMakeLists.txt  README.md  mirrorlist  postscript  update.ini.tpl  update.xsd
test/demo1/: update-2015-09-16-1-x86_64.upt.md5  update.ini
test/demo1/update/: update.xml
test/demo2/: update-2015-09-16-2-x86_64.upt.md5  update.ini
test/demo2/update/: postscript  update.xml
test/server-tool/: CMakeLists.txt  bill.c  bill.h  check.c  check.h  config.c  config.h  database.c  database.h  env.c  env.h  main.c  packlist.c  packlist.h  upd.c  upd.h  update-check.c  update-check.h  update-create.c  update-create.h  update-demo.c  update-demo.h  update-gen-repos.c  update-gen-repos.h
test/upts/: update-2015-09-16-1-x86_64.upt  update-2015-09-16-2-x86_64.upt  updates.xml.xz  updates.xml.xz.md5
